# cmake-w-praktyce

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
classes/: math.cpp
lib/sfml/: libsfml-audio.2.5.0.dylib  libsfml-graphics.2.5.0.dylib  libsfml-network.2.5.0.dylib  libsfml-system.2.5.0.dylib  libsfml-window.2.5.0.dylib
tests/: main.cpp  math.cpp
